# githit-adversary-sim

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: config.lab.json  config.lab.yaml  start_sink.py
src/adversary_sim/: __init__.py  cli.py  core.py
src/adversary_sim/plays/: auth_spray.py  exfil.py  recon.py
tests/: test_cli.py  test_import.py
